--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,10 +8,44 @@ env:
   REGISTRY: ghcr.io
   BACKEND_IMAGE: ghcr.io/${{ github.repository_owner }}/books-api-backend
   FRONTEND_IMAGE: ghcr.io/${{ github.repository_owner }}/books-api-frontend
+  # Versionado semántico: MAJOR.MINOR.PATCH  ->  1.0.(run_number)
   VERSION: 1.0.${{ github.run_number }}
 
 jobs:
+  # 1) QUALITY GATE: build + tests backend y frontend
+  build-and-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      # ---------- BACKEND ----------
+      - name: Backend - install deps
+        working-directory: backend
+        run: npm ci
+
+      - name: Backend - run tests
+        working-directory: backend
+        run: npm run test --if-present
+
+      # ---------- FRONTEND ----------
+      - name: Frontend - install deps
+        working-directory: frontend
+        run: npm ci
+
+      - name: Frontend - run tests
+        working-directory: frontend
+        run: npm run test --if-present
+
+  # 2) Build + push de imágenes (solo si pasó el quality gate)
   build-and-push:
+    needs: build-and-test
     runs-on: ubuntu-latest
 
     steps:
@@ -47,9 +81,13 @@ jobs:
             ${{ env.FRONTEND_IMAGE }}:${{ env.VERSION }}
             ${{ env.FRONTEND_IMAGE }}:latest
 
+  # 3) Deploy a QA (se corre solo si build-and-push fue OK)
   deploy-qa:
     needs: build-and-push
     runs-on: ubuntu-latest
+    environment:
+      name: qa
+      url: https://books-api-frontend-qa.onrender.com
     steps:
       - name: Trigger Render QA backend deploy
         run: curl -X POST "${{ secrets.RENDER_QA_BACKEND_HOOK }}"
@@ -57,10 +95,13 @@ jobs:
       - name: Trigger Render QA frontend deploy
         run: curl -X POST "${{ secrets.RENDER_QA_FRONTEND_HOOK }}"
 
+  # 4) Deploy a PROD con aprobación manual
   deploy-prod:
     needs: deploy-qa
     runs-on: ubuntu-latest
-    environment: production   # acá configurás aprobación manual
+    environment:
+      name: prod          # acá va el environment con aprobación manual
+      url: https://books-api-frontend-prod.onrender.com
     steps:
       - name: Trigger Render PROD backend deploy
         run: curl -X POST "${{ secrets.RENDER_PROD_BACKEND_HOOK }}"
