BD SQLite para QA y PROD

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-DB_HOST=host.docker.internal
+DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=pilar2004
-DB_NAME=tp07_library
+DB_NAME=tp08_library
